# svt-av1-optimization-research

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  OVERVIEW.md  README.md  justfile  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
config/: studies.schema.json  video_sources.json  video_sources.schema.json
config/studies/: baseline_sweep.json  film_grain.json  screen_content.json  tune_modes.json
data/encoded/: analysis_metadata.schema.json  encoding_metadata.schema.json  measurements.schema.json
data/raw_videos/: download_metadata.json  download_metadata.schema.json
data/test_clips/: clip_metadata.json  clip_metadata.schema.json
docs/: ANALYSIS_GUIDE.md  MEASUREMENT_GUIDE.md  METRIC_IMPROVEMENTS.md  PROGRESS_TRACKING.md  TROUBLESHOOTING.md  VISUALIZATION_GUIDE.md  VMAF_NOTES.md  WORKFLOW_EXAMPLE.md
scripts/: analyze_study.py  encode_study.py  extract_clips.py  fetch_videos.py  measure_study.py  utils.py  visualize_study.py
tests/: conftest.py
tests/fixtures/: README.md
tests/integration/: test_encode_study.py  test_extract_clips.py
tests/unit/: test_analyze_study.py  test_metadata_integrity.py  test_utils.py  test_visualize_study.py
